fix: 이미지 경로 및 Giscus term 생성 로직 수정
- Zscaler 포스트 이미지 경로를 relative_url 필터로 수정하여 baseurl 적용
- Giscus term 생성 로직을 page.path 기반으로 변경하여 permalink 구조와 무관하게 파일명 기반 term 생성
- 이미지 404 오류 및 Giscus 404 오류 해결

--- a/_includes/giscus.html
+++ b/_includes/giscus.html
@@ -21,7 +21,7 @@
               data-category="{{ site.giscus.category }}"
               data-category-id="{{ site.giscus.category_id }}"
               data-mapping="{{ site.giscus.mapping }}"
-              data-term="{% assign date_prefix = page.date | date: '%Y-%m-%d-' %}{% assign file_basename = page.id | remove_first: date_prefix %}{% assign term = file_basename | replace: '_', '-' | slugify %}{{ term }}"
+              data-term="{% assign date_prefix = page.date | date: '%Y-%m-%d-' %}{% assign file_path = page.path | split: '/' | last | remove_first: date_prefix | replace: '.md', '' %}{% assign term = file_path | replace: '_', '-' | slugify %}{{ term }}"
               data-strict="0"
               data-reactions-enabled="{{ site.giscus.reactions_enabled }}"
               data-emit-metadata="{{ site.giscus.emit_metadata }}"
